# namuplot

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/namuplot/: __init__.py  style.json  themes.py
tests/: smoke_test.py  test_themes.py
