[project]
name = "namuplot"
version = "0.4.1"
description = "Light/Dark Matplotlib themes that blends well with NamuWiki's color palette."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["matplotlib>=3.6,<4.0.0"]
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Iodine" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Matplotlib",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
urls = { "Repository" = "https://github.com/OpenIodine/namuplot.git" }

[dependency-groups]
dev = ["build>=1.3.0", "pytest>=8,<9.0", "twine>=6.2.0"]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
